syntax = "proto3";

package user.v1;

option go_package = "github.com/vagonaizer/authenitfication-service/api/proto/generated";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetProfile(GetProfileRequest) returns (UserResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UserResponse);
  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
  rpc ListUsers(ListUsersRequest) returns (UsersListResponse);
  rpc GetUserByID(GetUserByIDRequest) returns (UserResponse);
  rpc ActivateUser(ActivateUserRequest) returns (ActivateUserResponse);
  rpc DeactivateUser(DeactivateUserRequest) returns (DeactivateUserResponse);
  rpc AssignRole(AssignRoleRequest) returns (AssignRoleResponse);
  rpc RemoveRole(RemoveRoleRequest) returns (RemoveRoleResponse);
  rpc GetUserRoles(GetUserRolesRequest) returns (UserRolesResponse);
}

message GetProfileRequest {
  string user_id = 1;
}

message UpdateProfileRequest {
  string user_id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string username = 4;
}

message DeleteAccountRequest {
  string user_id = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
  string sort_by = 4;
  string sort_dir = 5;
}

message GetUserByIDRequest {
  string user_id = 1;
}

message ActivateUserRequest {
  string user_id = 1;
}

message DeactivateUserRequest {
  string user_id = 1;
}

message AssignRoleRequest {
  string user_id = 1;
  string role_id = 2;
}

message RemoveRoleRequest {
  string user_id = 1;
  string role_id = 2;
}

message GetUserRolesRequest {
  string user_id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  bool is_active = 6;
  bool is_verified = 7;
  google.protobuf.Timestamp last_login_at = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message UsersListResponse {
  repeated UserResponse users = 1;
  int64 total = 2;
  int32 page = 3;
  int32 page_size = 4;
  int32 total_pages = 5;
}

message DeleteAccountResponse {
  string message = 1;
}

message ActivateUserResponse {
  string message = 1;
}

message DeactivateUserResponse {
  string message = 1;
}

message AssignRoleResponse {
  string message = 1;
}

message RemoveRoleResponse {
  string message = 1;
}

message UserRolesResponse {
  string user_id = 1;
  repeated Role roles = 2;
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
}
